fix: don't overlap `.som-horizontal-input` dashes with actual placeholders

--- a/app/assets/stylesheets/som.css
+++ b/app/assets/stylesheets/som.css
@@ -192,24 +192,30 @@
   padding: .5rem .75rem;
   border: 1px solid transparent;
   background-color: #FFEAD0;
-  background-image: url("input-bg.svg");
-  background-repeat: repeat-x;
-  background-position-y: -200%;
   border-radius: var(--radius-xl);
   transition: border-color .25s, background-position-y .25s;
+
+  &:focus {
+    outline: none;
+    border-color: 1px solid var(--color-som-dark);
+  }
+}
+
+.som-horizontal-input[placeholder=" "] {
+  background-position-y: -200%;
+  background-image: url("input-bg.svg");
+  background-repeat: repeat-x;
 
   &:placeholder-shown {
     background-position-y: 80%;
   }
 
   &:focus {
-    outline: none;
-    border-color: 1px solid var(--color-som-dark);
     background-position-y: -200%;
   }
 }
 
-textarea.som-horizontal-input  {
+textarea.som-horizontal-input[placeholder=" "] {
   background-position-y: 200%;
 
   &:placeholder-shown {
